--- a/games.ipynb
+++ b/games.ipynb
@@ -6,7 +6,7 @@
       "name": "games.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN69lN5XLgjuVgxAn64MCSK",
+      "authorship_tag": "ABX9TyOvJg/2vV8J1RNiZ+6tx70j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "lK7qCWij6_Xg",
         "colab_type": "code",
-        "outputId": "9bb04cc4-7ada-4ca5-b74d-ddad902df6a4",
+        "outputId": "9d66cbda-8e53-4cae-ae97-f6caa8b6dd38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -68,7 +68,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,8 +194,135 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 31
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "namwK2fHX4OH",
+        "colab_type": "text"
+      },
+      "source": [
+        "Selección de Features para predecir el precio en dolares"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TFKXcPYlXiyy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        },
+        "outputId": "55ceac89-a1ca-4d03-b65f-59b7ed05cf18"
+      },
+      "source": [
+        "df = df.loc[:, ['Global_Sales','NA_Sales','JP_Sales','Other_Sales','EU_Sales']]\n",
+        "df.head()"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Global_Sales</th>\n",
+              "      <th>NA_Sales</th>\n",
+              "      <th>JP_Sales</th>\n",
+              "      <th>Other_Sales</th>\n",
+              "      <th>EU_Sales</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>82.74</td>\n",
+              "      <td>41.49</td>\n",
+              "      <td>3.77</td>\n",
+              "      <td>8.46</td>\n",
+              "      <td>29.02</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>40.24</td>\n",
+              "      <td>29.08</td>\n",
+              "      <td>6.81</td>\n",
+              "      <td>0.77</td>\n",
+              "      <td>3.58</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>35.82</td>\n",
+              "      <td>15.85</td>\n",
+              "      <td>3.79</td>\n",
+              "      <td>3.31</td>\n",
+              "      <td>12.88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>33.00</td>\n",
+              "      <td>15.75</td>\n",
+              "      <td>3.28</td>\n",
+              "      <td>2.96</td>\n",
+              "      <td>11.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>31.37</td>\n",
+              "      <td>11.27</td>\n",
+              "      <td>10.22</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>8.89</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Global_Sales  NA_Sales  JP_Sales  Other_Sales  EU_Sales\n",
+              "0         82.74     41.49      3.77         8.46     29.02\n",
+              "1         40.24     29.08      6.81         0.77      3.58\n",
+              "2         35.82     15.85      3.79         3.31     12.88\n",
+              "3         33.00     15.75      3.28         2.96     11.01\n",
+              "4         31.37     11.27     10.22         1.00      8.89"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mdTBj93VYLyG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Separamos Features de Target"
       ]
     },
     {
@@ -203,36 +330,23 @@
       "metadata": {
         "id": "6UESWvB-735H",
         "colab_type": "code",
-        "outputId": "18d4e88f-2872-4f4e-f98d-0a7848011a23",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        }
+        "colab": {}
       },
       "source": [
         "X = df.loc[:, ['Global_Sales','NA_Sales','JP_Sales','Other_Sales']]\n",
-        "y = df.EU_Sales\n",
-        "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-        "\n",
-        "lr = linear_model.LinearRegression()\n",
-        "lr.fit(X_train, y_train)\n",
-        "\n",
-        "Y_pred = lr.predict(X_test)\n",
-        "\n",
-        "print('Precisión del modelo:')\n",
-        "print(lr.score(X_train, y_train))"
+        "y = df.EU_Sales"
       ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Precisión del modelo:\n",
-            "0.9998941390333609\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P_i7F9UkYfsQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Separamos los datos para train y test"
       ]
     },
     {
@@ -243,10 +357,133 @@
         "colab": {}
       },
       "source": [
-        ""
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ybsAEpxNYukH",
+        "colab_type": "text"
+      },
+      "source": [
+        "Construccion del modelo de Regresion Lineal"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5glRvFmeYr9h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "lr = linear_model.LinearRegression()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jY-_22tAY7ON",
+        "colab_type": "text"
+      },
+      "source": [
+        "Entrenamiento"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-gsCPz4-Y9wy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9006a8ce-3ad9-4dbd-b408-8ea32e39dc32"
+      },
+      "source": [
+        "lr.fit(X_train, y_train)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nKeCA63iZAY7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Predicciones"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BnAesTm8ZEFa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_pred = lr.predict(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vxzl7q8yZLzG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Precisión del modelo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AtBXUGC0Y5r_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "8d2508a1-39d1-450f-e812-b4329266e7b8"
+      },
+      "source": [
+        "print('Precisión del modelo:')\n",
+        "print(lr.score(X_train, y_train))"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Precisión del modelo:\n",
+            "0.9998928183569968\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
