--- a/games.ipynb
+++ b/games.ipynb
@@ -6,7 +6,7 @@
       "name": "games.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOvJg/2vV8J1RNiZ+6tx70j",
+      "authorship_tag": "ABX9TyOSDhDMkaJXZR8Qu4D+XcmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Leonardo1133/VideoGamesSales/blob/master/games.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Leonardo1133/-Video-Games-Sales-prediction-with-Linear-Regression/blob/master/games.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -205,7 +205,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Selección de Features para predecir el precio en dolares"
+        "Selección de Features para predecir ventas en EEUU\n"
       ]
     },
     {
