--- a/games.ipynb
+++ b/games.ipynb
@@ -6,7 +6,7 @@
       "name": "games.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSDhDMkaJXZR8Qu4D+XcmD",
+      "authorship_tag": "ABX9TyOrweuN0y4WLsBrI70CDj/2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "lK7qCWij6_Xg",
         "colab_type": "code",
-        "outputId": "9d66cbda-8e53-4cae-ae97-f6caa8b6dd38",
+        "outputId": "a81b7e82-2df3-44e9-ef45-bce7b79cf6a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -68,7 +68,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 41
         }
       ]
     },
@@ -217,13 +217,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "55ceac89-a1ca-4d03-b65f-59b7ed05cf18"
+        "outputId": "04eb559d-5b05-4b06-9dee-a7567066d788"
       },
       "source": [
-        "df = df.loc[:, ['Global_Sales','NA_Sales','JP_Sales','Other_Sales','EU_Sales']]\n",
+        "df = df.loc[:, ['NA_Sales','EU_Sales','JP_Sales','Other_Sales','Global_Sales']]\n",
         "df.head()"
       ],
-      "execution_count": 32,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,71 +247,71 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Global_Sales</th>\n",
               "      <th>NA_Sales</th>\n",
+              "      <th>EU_Sales</th>\n",
               "      <th>JP_Sales</th>\n",
               "      <th>Other_Sales</th>\n",
-              "      <th>EU_Sales</th>\n",
+              "      <th>Global_Sales</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>82.74</td>\n",
               "      <td>41.49</td>\n",
+              "      <td>29.02</td>\n",
               "      <td>3.77</td>\n",
               "      <td>8.46</td>\n",
-              "      <td>29.02</td>\n",
+              "      <td>82.74</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>40.24</td>\n",
               "      <td>29.08</td>\n",
+              "      <td>3.58</td>\n",
               "      <td>6.81</td>\n",
               "      <td>0.77</td>\n",
-              "      <td>3.58</td>\n",
+              "      <td>40.24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>35.82</td>\n",
               "      <td>15.85</td>\n",
+              "      <td>12.88</td>\n",
               "      <td>3.79</td>\n",
               "      <td>3.31</td>\n",
-              "      <td>12.88</td>\n",
+              "      <td>35.82</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>33.00</td>\n",
               "      <td>15.75</td>\n",
+              "      <td>11.01</td>\n",
               "      <td>3.28</td>\n",
               "      <td>2.96</td>\n",
-              "      <td>11.01</td>\n",
+              "      <td>33.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>31.37</td>\n",
               "      <td>11.27</td>\n",
+              "      <td>8.89</td>\n",
               "      <td>10.22</td>\n",
               "      <td>1.00</td>\n",
-              "      <td>8.89</td>\n",
+              "      <td>31.37</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   Global_Sales  NA_Sales  JP_Sales  Other_Sales  EU_Sales\n",
-              "0         82.74     41.49      3.77         8.46     29.02\n",
-              "1         40.24     29.08      6.81         0.77      3.58\n",
-              "2         35.82     15.85      3.79         3.31     12.88\n",
-              "3         33.00     15.75      3.28         2.96     11.01\n",
-              "4         31.37     11.27     10.22         1.00      8.89"
+              "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales\n",
+              "0     41.49     29.02      3.77         8.46         82.74\n",
+              "1     29.08      3.58      6.81         0.77         40.24\n",
+              "2     15.85     12.88      3.79         3.31         35.82\n",
+              "3     15.75     11.01      3.28         2.96         33.00\n",
+              "4     11.27      8.89     10.22         1.00         31.37"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 42
         }
       ]
     },
@@ -333,8 +333,8 @@
         "colab": {}
       },
       "source": [
-        "X = df.loc[:, ['Global_Sales','NA_Sales','JP_Sales','Other_Sales']]\n",
-        "y = df.EU_Sales"
+        "X = df.loc[:, ['NA_Sales','EU_Sales','JP_Sales','Global_Sales']]\n",
+        "y = df.Other_Sales"
       ],
       "execution_count": 0,
       "outputs": []
@@ -404,12 +404,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "9006a8ce-3ad9-4dbd-b408-8ea32e39dc32"
+        "outputId": "41cd259c-42aa-4fe4-ccc2-e6d0bfcde78a"
       },
       "source": [
         "lr.fit(X_train, y_train)"
       ],
-      "execution_count": 36,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 46
         }
       ]
     },
@@ -467,19 +467,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "8d2508a1-39d1-450f-e812-b4329266e7b8"
+        "outputId": "35233281-2a6d-48ae-ff55-e8c816537170"
       },
       "source": [
         "print('Precisión del modelo:')\n",
         "print(lr.score(X_train, y_train))"
       ],
-      "execution_count": 38,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión del modelo:\n",
-            "0.9998928183569968\n"
+            "0.9993030708141426\n"
           ],
           "name": "stdout"
         }
