--- a/games.ipynb
+++ b/games.ipynb
@@ -6,7 +6,7 @@
       "name": "games.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOrweuN0y4WLsBrI70CDj/2",
+      "authorship_tag": "ABX9TyOlha2/WvRyGMUwq+3516Hi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Leonardo1133/-Video-Games-Sales-prediction-with-Linear-Regression/blob/master/games.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Leonardo1133/Video-Games-Sales-prediction-with-Linear-Regression/blob/master/games.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,6 +49,7 @@
         "colab": {}
       },
       "source": [
+        "## fuente del dataset 'https://www.kaggle.com/gregorut/videogamesales/download'\n",
         "df = pd.read_csv(\"vgsales.csv\")"
       ],
       "execution_count": 0,
@@ -59,7 +60,7 @@
       "metadata": {
         "id": "lK7qCWij6_Xg",
         "colab_type": "code",
-        "outputId": "a81b7e82-2df3-44e9-ef45-bce7b79cf6a5",
+        "outputId": "7a10349f-7579-414f-be8a-9a10e181fc55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -68,7 +69,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 41,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +195,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 11
         }
       ]
     },
@@ -213,17 +214,17 @@
       "metadata": {
         "id": "TFKXcPYlXiyy",
         "colab_type": "code",
+        "outputId": "04eb559d-5b05-4b06-9dee-a7567066d788",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
-        },
-        "outputId": "04eb559d-5b05-4b06-9dee-a7567066d788"
+        }
       },
       "source": [
         "df = df.loc[:, ['NA_Sales','EU_Sales','JP_Sales','Other_Sales','Global_Sales']]\n",
         "df.head()"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,16 +401,16 @@
       "metadata": {
         "id": "-gsCPz4-Y9wy",
         "colab_type": "code",
+        "outputId": "41cd259c-42aa-4fe4-ccc2-e6d0bfcde78a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "41cd259c-42aa-4fe4-ccc2-e6d0bfcde78a"
+        }
       },
       "source": [
         "lr.fit(X_train, y_train)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,17 +464,17 @@
       "metadata": {
         "id": "AtBXUGC0Y5r_",
         "colab_type": "code",
+        "outputId": "35233281-2a6d-48ae-ff55-e8c816537170",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "35233281-2a6d-48ae-ff55-e8c816537170"
+        }
       },
       "source": [
         "print('Precisión del modelo:')\n",
         "print(lr.score(X_train, y_train))"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
