--- a/games.ipynb
+++ b/games.ipynb
@@ -6,7 +6,7 @@
       "name": "games.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOlha2/WvRyGMUwq+3516Hi",
+      "authorship_tag": "ABX9TyPqfC9xMCEfx4iU2lHHT1i4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Selección de Features para predecir ventas en EEUU\n"
+        "Selección de Features para predecir una venta determinada\n"
       ]
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "TFKXcPYlXiyy",
         "colab_type": "code",
-        "outputId": "04eb559d-5b05-4b06-9dee-a7567066d788",
+        "outputId": "6e51452d-2ea2-4739-f151-6e02c884b326",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 198
@@ -224,7 +224,7 @@
         "df = df.loc[:, ['NA_Sales','EU_Sales','JP_Sales','Other_Sales','Global_Sales']]\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +312,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 12
         }
       ]
     },
@@ -323,7 +323,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Separamos Features de Target"
+        "Separamos Features y Target"
       ]
     },
     {
@@ -401,7 +401,7 @@
       "metadata": {
         "id": "-gsCPz4-Y9wy",
         "colab_type": "code",
-        "outputId": "41cd259c-42aa-4fe4-ccc2-e6d0bfcde78a",
+        "outputId": "4b8f522e-6da2-4bd7-dc89-0bf5100e981c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -410,7 +410,7 @@
       "source": [
         "lr.fit(X_train, y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 16
         }
       ]
     },
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "AtBXUGC0Y5r_",
         "colab_type": "code",
-        "outputId": "35233281-2a6d-48ae-ff55-e8c816537170",
+        "outputId": "85c3a598-7f77-4b62-dbf8-5c67bac2516b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -474,13 +474,13 @@
         "print('Precisión del modelo:')\n",
         "print(lr.score(X_train, y_train))"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Precisión del modelo:\n",
-            "0.9993030708141426\n"
+            "0.9993174183439555\n"
           ],
           "name": "stdout"
         }
